--- a/style.css
+++ b/style.css
@@ -5,8 +5,140 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.vakken div{
-    width: 30%;
+img{
+    width: 100%;
+    height: 100%;
+}
+
+main, header{
+    width: 80vh;
+    margin: 0 auto;
+}
+main{
+    margin-bottom: 10rem;
+}
+header{
+    margin-top: 3rem;
+    display: flex;
+    height: 100px;
+}
+header #titelDescription{
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+header #titelDescription h1{
+    margin-bottom: 1rem;
+}
+header img{
+    max-width: 15%;
+    height: 100%;
+    margin-right: 2rem;
+}
+
+section {
+    margin-top: 5rem;
+}
+
+/* VAKKEN */
+#vakken{
+    margin-top: 5rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+}
+#vakken .vak{
+    width: 200px;
     height: 200px;
+    border-radius: 5px;
     background-color: grey;
+    margin: 0.7rem;
+}
+
+#vakken #column2, #vakken #column3{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#vakken #column2 #column2row1{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+#vakken #column2 #column2row1 #wpl3, #vakken #column2 #column2row1 #ux2{
+    width: 90px;
+    height: 90px;
+}
+
+#vakken #webExpert1, #vakken #column3 #dataVis, #vakken #column3 #projMan{
+    height: 90px;
+}
+
+
+/* ABOUT ME */
+section#aboutMe{
+    margin-top: 5rem;
+    height: 200px;
+    display: flex;
+    justify-content: space-between;
+}
+
+#aboutMe #imageDiv{
+    background-color: grey;
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#aboutMe #imageDiv img{
+    object-fit: cover;
+    flex-shrink: 0;
+    min-width: 100%;
+    min-height: 100%;
+}
+
+#aboutMe #aboutMeDescription{
+    max-width: 70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+#aboutMe button{
+    width: 200px;
+    padding: 1rem;
+    border-radius: 25px;
+    border: none;
+    background-color: grey;
+    color: white
+}
+
+/* My Work */
+section#myWork{
+    text-align: center;
+}
+#myWork h2{
+    margin-bottom: 1rem;
+}
+#works{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#myWork #works .work{
+    height: 200px;
+    width: 30%;
+    background-color: grey;
+    border-radius: 5px;
 }
